# pdf-extractor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: lint.yml  test.yml  workflow.yml
docker/: Dockerfile  docker-bake.hcl  docker-compose.yml  lambda.Dockerfile
src/: extract_pdf.py  lambda.py  main.py
test/: conftest.py  test_main.py
test/data/: test-file-1.txt
