[project]
name = "pdf-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "pymupdf>=1.25.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
lambda = [
    "mangum>=0.19.0",
]
test = ["httpx>=0.28.1", "pytest>=8.3.5"]

[tool.pytest.ini_options]
filterwarnings = ["ignore"]
